完成布局，图标组件及项目结构

--- a/components/style/color/_colors.scss
+++ b/components/style/color/_colors.scss
@@ -3,6 +3,11 @@ $red-light       :#f46e65;
 $red-base        :#f04134;
 $red-dark        :#d73435;
 
+// green
+$green-light     :#3dbd7d;
+$green-base      :#00a854;
+$green-dark      :#00924c;
+
 // blue
 $blue-light      :#49a9ee;
 $blue-base       :#108ee9;
