--- a/components/style/core/_base.scss
+++ b/components/style/core/_base.scss
@@ -1,7 +1,7 @@
 body{
     font-family: $font-family;
     font-size: $font-size-base;
-    color: $text-color-normal;
+    color: $text-color;
 
     *{
       box-sizing: border-box;
@@ -9,7 +9,7 @@ body{
 }
 
 h2,h3,h4,.text-h2,.text-h3,.text-h3{
-    color: $text-color-normal;
+    color: $text-color;
     font-weight: bold;
 }
 h2,.text-h2{
@@ -20,21 +20,21 @@ h3,.text-h3{
 }
 .text-content{
     font-size: $font-size-base;
-    color: $text-color-normal;
+    color: $text-color;
 }
 .text-help{
     font-size: $font-size-base;
-    color: $text-color-help;
+    color: $help-color;
 }
 .text-disabled{
     font-size: $font-size-base;
-    color: $text-color-disabled;
+    color: $disabled-color;
 }
 a,.text-link{
     color: $link-color;
     text-decoration: none;
 
     &:hover{
-        color: lighten($link-color, 20%);
+        color: $link-hover-color;
     }
 }
