--- a/components/style/themes/default.scss
+++ b/components/style/themes/default.scss
@@ -1,58 +1,38 @@
 @import "../color/colors";
-// Base config
-//
-// Base config or ui theme
 
-$ui-prefix             : v;
+// PREFIX
+$ui-prefix              : v;
 
-// Colors
-//
-// System basic color
-$color-primary         : $blue-base !default;
-$color-success         : $green-base !default;
-$color-warning         : $yellow-base !default;
-$color-danger          : $red-base !default;
-$color-default         :#D9D9D9 !default;
+// COLORS
+$color-primary          : $blue-base !default;
+$color-success          : $green-base !default;
+$color-warning          : $yellow-base !default;
+$color-danger           : $red-base !default;
+$color-default          :#D9D9D9 !default;
 
 // Fonts
-//
-// Font and line-height
-$font-family: "Segoe UI", Roboto, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
-$font-size-base: 12px !default;
-$font-size-lg: 14px !default;
-$line-height-base: 1.5 !default;
-
-$text-color: $light !default;
-$text-color-help: #999 !default;
-$text-color-disabled: #ccc !default;
-$link-color: $color-primary !default;
+$font-family            : "Segoe UI", Roboto, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+$font-size-base         : 12px !default;
+$font-size-lg           : 14px !default;
+$line-height-base       : 1.5 !default;
+$text-color             : lighten(#000, 35%) !default;
+$heading-color          : lighten(#000, 25%) !default;
+$help-color             : lighten(#000, 55%) !default;
+$disabled-color         : lighten(#000, 75%) !default;
 
 
-// Grid breakpoints
-//
-// Define the minimum dimensions at which your layout will change,
-// adapting to different screen sizes, for use in media queries.
-
-$grid-breakpoints: (
-  xs: 0,
-  sm: 576px,
-  md: 768px,
-  lg: 992px,
-  xl: 1200px
-) !default;
+// LINKS
+$link-color             : $blue-base !default;
+$link-hover-color       : $blue-light !default;
+$link-active-color      : $blue-dark !default;
 
 
-// Grid columns
-//
-// Set the number of columns and specify the width of the gutter
+// ICON
+$icon-url               : "http://at.alicdn.com/t/font_x3arfnhr69hyf1or" !default;
+$icon-prefix            : "vantd" !default;
+$icon-size-base         : 16px;
 
-$grid-columns: 24 !default;
+// GRID
+$grid-columns           : 24 !default;
+$grid-breakpoints       : (xs: 0, sm: 576px, md: 768px, lg: 992px, xl: 1200px) !default;
 
-
-// Icons
-//
-// Set the icon style
-
-$icon-url: "http://at.alicdn.com/t/font_4scup5afackgldi" !default;
-$icon-prefix: "vantd" !default;
-$icon-size-base: 16px;
