--- a/components/style/themes/default.scss
+++ b/components/style/themes/default.scss
@@ -36,3 +36,7 @@ $icon-size-base         : 16px;
 $grid-columns           : 24 !default;
 $grid-breakpoints       : (xs: 0, sm: 576px, md: 768px, lg: 992px, xl: 1200px) !default;
 
+// BUTTON
+$btn-padding-small      : 2px 8px;
+$btn-padding-base       : 4px 16px;
+$btn-padding-large      : 6px 24px;
