--- a/components/style/themes/default.scss
+++ b/components/style/themes/default.scss
@@ -11,7 +11,7 @@ $color-danger           : $red-base !default;
 $color-default          :#D9D9D9 !default;
 
 // Fonts
-$font-family            : "Segoe UI", Roboto, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+$font-family            : "Segoe UI", "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", 'SimSun', sans-serif !default;
 $font-size-base         : 12px !default;
 $font-size-lg           : 14px !default;
 $line-height-base       : 1.5 !default;
