--- a/components/style/button/index.scss
+++ b/components/style/button/index.scss
@@ -8,6 +8,7 @@
   margin-bottom: 10px;
   line-height: $line-height-base;
   color: $text-color;
+  font-size: $font-size-base;
   background-color: #FFF;
   border: 1px solid $color-default;
   border-radius: 4px;
@@ -122,6 +123,60 @@
   .v-icon{
     font-size: 14px;
     margin: 0;
+  }
+}
+
+// 按钮组
+.#{$ui-prefix}-btn-group{
+  display: inline-block;
+  margin-right: 6px;
+  margin-bottom: 10px;
+  font-size: 0;
+
+  .#{$ui-prefix}-btn{
+    margin-right: 0;
+    margin-bottom: 0;
+    border-radius: 0;
+  }
+  .#{$ui-prefix}-btn:first-child{
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+  }
+  .#{$ui-prefix}-btn:last-child{
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+  }
+  .#{$ui-prefix}-btn-default{
+    &:not(:last-child){
+      border-right-width: 0;
+      &:not(.disabled):hover{
+        border-right-width: 1px;
+        &+.#{$ui-prefix}-btn-default{
+          border-left-width: 0;
+        }
+      }
+    }
+  }
+  .#{$ui-prefix}-btn-dashed{
+    &:not(:last-child){
+      border-right-width: 0;
+      &:not(.disabled):hover{
+        border-right-width: 1px;
+        &+.#{$ui-prefix}-btn-dashed{
+          border-left-width: 0;
+        }
+      }
+    }
+  }
+  .#{$ui-prefix}-btn-primary{
+    &:not(:last-child){
+      border-right: 1px solid $blue-dark;
+    }
+  }
+  .#{$ui-prefix}-btn-danger{
+    &:not(:last-child){
+      border-right: 1px solid $red-dark;
+    }
   }
 }
 
