--- a/components/style/dropdown/index.scss
+++ b/components/style/dropdown/index.scss
@@ -9,13 +9,15 @@
 }
 
 .#{$ui-prefix}-dropdown-rel{
-  //  position: relative;
+  .#{$ui-prefix}-btn{
+    margin-bottom: 0;
+  }
 }
 
 .#{$ui-prefix}-dropdown-menu{
-  // position: absolute;
   padding: 0;
-  min-width: 160px;
+  margin-top: 2px;
+  min-width: 120px;
   border-radius: 4px;
   border: 1px solid #EFEFEF;
   background-color: #FFFFFF;
