--- a/components/style/dropdown/index.scss
+++ b/components/style/dropdown/index.scss
@@ -29,6 +29,7 @@
 .#{$ui-prefix}-dropdown-menu{
   padding: 0;
   margin-top: 2px;
+  margin-bottom: 2px;
   border-radius: 4px;
   border: 1px solid #EFEFEF;
   background-color: #FFFFFF;
