--- a/src/components/style/message/index.scss
+++ b/src/components/style/message/index.scss
@@ -7,18 +7,22 @@
   bottom:  auto;
   left: 0;
   right: 0;
-
-  padding-top: 8px;
-  padding-bottom: 3px;
+  z-index: -1;
 
   text-align: center;
 }
 
 .#{$ui-prefix}-message-box {
-  margin-bottom: 8px;
+  overflow: hidden;
+  padding-top: 8px;
+  padding-bottom: 8px;
+
   &:last-child{
-    animation-name: leftFade;
-    animation-duration: 100ms;
+    .#{$ui-prefix}-message-wrapper{
+      animation-name: topFade;
+      animation-duration: 100ms;
+      animation-timing-function: ease-in;
+    }
   }
 
   &.hiding{
@@ -32,37 +36,45 @@
   display: inline-block;
   padding-left: 16px;
   padding-right: 16px;
-  padding-top: 8px;
-  padding-bottom: 8px;
+  padding-top: 6px;
+  padding-bottom: 6px;
 
   background-color: #FFF;
   border-radius: 4px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, .2);
+}
 
+.v-message-content {
+  display: flex;
+  justify-content: center;
   .#{$ui-prefix}-message-icon{
     .#{$ui-prefix}-icon {
       font-size: 16px;
     }
-    &__success{
+    &__success {
       color: $green-light;
     }
-    &__error{
+    &__error {
       color: $red-light;
     }
-    &__warning{
+    &__warning {
       color: $yellow-light;
     }
-    &__info{
+    &__info {
+      color: $blue-light;
+    }
+    &__loading {
       color: $blue-light;
     }
   }
   .#{$ui-prefix}-message-body{
     padding-left: 8px;
+    line-height: 16px;
   }
 }
 
 
-@keyframes leftFade {
+@keyframes topFade {
   from {
     transform: translateY(-100%);
   }
