--- a/src/components/style/color/_colors.scss
+++ b/src/components/style/color/_colors.scss
@@ -37,3 +37,9 @@ $yellow-dark     :#e09a00;
 $cyan-light      :#3db8c1;
 $cyan-base       :#00a2ae;
 $cyan-dark       :#008997;
+
+
+// gray
+$gray-light      :#d9d9d9;
+$gray-base          :#bfbfbf;
+$gray-dark       :#919191;
