--- a/src/components/style/select/index.scss
+++ b/src/components/style/select/index.scss
@@ -6,25 +6,36 @@
   vertical-align: top;
   margin-bottom: 12px;
   margin-right: 8px;
-}
 
-.#{$ui-prefix}-select-large{
-  .#{$ui-prefix}-select-input {
-    line-height: 32px;
+  &__large{
+    .#{$ui-prefix}-select-input {
+      min-height: 32px;
+      line-height: 32px;
+
+      &__placeholder {
+        min-height: 32px;
+      }
+    }
   }
-}
 
-.#{$ui-prefix}-select-small{
-  .#{$ui-prefix}-select-input {
-    line-height: 24px;
+  &__small{
+    .#{$ui-prefix}-select-input {
+      min-height: 24px;
+      line-height: 24px;
+      &__placeholder {
+        min-height: 24px;
+      }
+    }
   }
 }
 
 .#{$ui-prefix}-select-input {
   position: relative;
   width: 100%;
+  min-height: 28px;
   padding-left: 8px;
   padding-right: 24px;
+
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -43,6 +54,7 @@
     border-color: $blue-light;
   }
   &__placeholder{
+    min-height: 28px;
     color: #DDD;
   }
   &__caret{
@@ -87,6 +99,29 @@
       font-size: 10px;
     }
     transition: all 100ms;
+  }
+
+  &__tag{
+    display: inline-block;
+    line-height: 20px;
+    padding-left: 8px;
+    padding-right: 8px;
+    margin-right: 10px;
+    border-radius: 4px;
+    background-color: #F2F2F2;
+    transform: scaleX(1);
+    transition: all 100ms;
+  }
+
+  &__tagclose{
+    padding-left: 2px;
+    color: rgba(0, 0, 0, .4);
+    &:hover {
+      color: rgba(0, 0, 0, .6);;
+    }
+    .v-icon{
+      font-size: 12px;
+    }
   }
 }
 
@@ -144,6 +179,38 @@
     color: $disabled-color;
     &:hover{
       background-color: #FFF;
+    }
+  }
+}
+
+.#{$ui-prefix}-select{
+  &__multiple {
+    .#{$ui-prefix}-select-input {
+      overflow: visible;
+      white-space: normal;
+    }
+    .#{$ui-prefix}-option-item {
+      position: relative;
+      &:after{
+        position: absolute;
+        right: 8px;
+        content: '\ee49';
+        font-family:"vantd" !important;
+        font-size: 12px;
+        font-style:normal;
+        color: transparent;
+        transition: all 100ms;
+      }
+      &:hover {
+        &:after{
+          color: $gray-light;
+        }
+      }
+      &.selected {
+        &:after{
+          color: $blue-light;
+        }
+      }
     }
   }
 }
